--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,6 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.0.100-rc.2.21505.57
+        dotnet-version: 6.0.100
     - name: Build DNTCaptcha.Blazor lib
       run: dotnet build ./src/DNTCaptcha.Blazor.WasmSample/Server/DNTCaptcha.Blazor.WasmSample.Server.csproj --configuration Release
