--- a/src/DNTCaptcha.Blazor/DNTCaptcha.Blazor.csproj
+++ b/src/DNTCaptcha.Blazor/DNTCaptcha.Blazor.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net5.0;</TargetFrameworks>
+    <TargetFrameworks>net7.0;net6.0;net5.0;</TargetFrameworks>
     <BlazorLinkOnBuild Condition="'$(Configuration)'!='Release'">false</BlazorLinkOnBuild>
     <Description>A captcha component for the Blazor apps</Description>
-    <VersionPrefix>1.1.2</VersionPrefix>
+    <VersionPrefix>1.1.3</VersionPrefix>
     <Authors>Vahid Nasiri</Authors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>DNTCaptcha.Blazor</AssemblyName>
@@ -43,11 +43,11 @@
     <NoWarn>NU5104;</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Meziantou.Analyzer" Version="1.0.743">
+    <PackageReference Include="Meziantou.Analyzer" Version="1.0.748">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.3.48">
+    <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.27">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -59,7 +59,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.47.0.55603">
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.48.0.56517">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -94,5 +94,11 @@
   </ItemGroup>
   <PropertyGroup Condition="('$(TargetFramework)' == 'net6.0')">
     <DefineConstants>NET6_0</DefineConstants>
+  </PropertyGroup>
+  <ItemGroup Condition="('$(TargetFramework)' == 'net7.0')">
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="[7.0.0,)" />
+  </ItemGroup>
+  <PropertyGroup Condition="('$(TargetFramework)' == 'net7.0')">
+    <DefineConstants>NET7_0</DefineConstants>
   </PropertyGroup>
 </Project>
